ya casi lo acabo solo me falta un cuadro para que quede

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="container">
+    <div class="cubo"></div>
+    <div class="cubo"></div>
+    <div class="cubo"></div>
+    <div class="cubo"></div>
+    <div class="cubo"></div> 
+    <div class="cubo"></div>
+    <div class="cubo"></div> 
+    <div class="cubo"></div>
+    <div class="cubo"></div> 
+    <div class="cubo"></div>
+    <div class="cubo"></div> 
+    <div class="cubo"></div> 
+    <div class="cubo"></div>
+    </div>
 </body>
 </html>
